fix/1034 fix letter spacing

--- a/src/styles/mobile-style.less
+++ b/src/styles/mobile-style.less
@@ -59,6 +59,7 @@ body {
             border: 1px solid #dedede;
             border-radius: 3px;
             background: #fff;
+            letter-spacing: normal;
 
             &:hover {
                 background-color: #f6f6f6;
